VSE doesn't show last 3 frames of Quicktime movie #32399

Closed
opened 2012-08-24 06:53:53 +02:00 by Sacha Goedegebure · 6 comments

%%%Quicktime movies are shown in VSE with the last 3 frames frozen (showing the 4th frame).
I'm aware there is less support for quicktime format. However, it's also for movies rendered in Blender, which seems weird behavior.

Attached is simple blendfile & movie rendered in blender (quicktime, H.264)

Worked better in 2.61; only freezes last frame. Since 2.62 last 3 frames freeze.

r50166 win64%%%

%%%Quicktime movies are shown in VSE with the last 3 frames frozen (showing the 4th frame). I'm aware there is less support for quicktime format. However, it's also for movies rendered in Blender, which seems weird behavior. Attached is simple blendfile & movie rendered in blender (quicktime, H.264) Worked better in 2.61; only freezes last frame. Since 2.62 last 3 frames freeze. r50166 win64%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%since this issue of the last 3 frames freezing also happens outside VSE (also node editor & movie clip editor) , I guess I picked the wrong category.

Is more general category. Or import/export?%%%

%%%since this issue of the last 3 frames freezing also happens outside VSE (also node editor & movie clip editor) , I guess I picked the wrong category. Is more general category. Or import/export?%%%

%%%Confirmed the bug, assigning to Sergey since he knows this ffmpeg movie seeking stuff best. Also changed the category to Image & Movie I/O, but it doesn't matter much really.%%%

%%%Confirmed the bug, assigning to Sergey since he knows this ffmpeg movie seeking stuff best. Also changed the category to Image & Movie I/O, but it doesn't matter much really.%%%

%%%It seems to happen with any codec with all Blender >= 2.57. The thing is that there's EOF stored in the file, which prevents working even with timecode.

Probably something with video file saving itself, not so good in this magic.

Peter, your help would be really appreciated here.%%%

%%%It seems to happen with any codec with all Blender >= 2.57. The thing is that there's EOF stored in the file, which prevents working even with timecode. Probably something with video file saving itself, not so good in this magic. Peter, your help would be really appreciated here.%%%
Member

%%%fix is in SVN, bug was on decoding side.

Regards,
Peter

%%%

%%%fix is in SVN, bug was on decoding side. Regards, Peter %%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32399
No description provided.